--- a/dev1.html
+++ b/dev1.html
@@ -54,7 +54,7 @@
                 code1.innerHTML = code1.innerHTML.replace("???", "5");
                 textInputElement.value = "Bonne réponse";
                 textInputElement.disabled = true;
-                textInputElement.insertAdjacentHTML("afterend", "<p><b>Première partie du code : allM<b>");
+                textInputElement.insertAdjacentHTML("afterend", "<p><b>Première partie du code : aLlM<b>");
                 code1.insertAdjacentHTML("afterend", `<br><div>Console :<pre><code id="out1" class="nohighlight" style="font-size: 15px;">5 * 1 = 5 
 5 * 2 = 10 
 5 * 3 = 15 
